--- a/package.json
+++ b/package.json
@@ -148,7 +148,7 @@
     "@hmpps-book-secure-move-frameworks/2.5.0": "git+https://github.com/ministryofjustice/hmpps-book-secure-move-frameworks.git#v2.5.0",
     "@hmpps-book-secure-move-frameworks/2.5.1": "git+https://github.com/ministryofjustice/hmpps-book-secure-move-frameworks.git#v2.5.1",
     "@hmpps-book-secure-move-frameworks/2.5.2": "git+https://github.com/ministryofjustice/hmpps-book-secure-move-frameworks.git#v2.5.2",
-    "@ministryofjustice/frontend": "3.7.2",
+    "@ministryofjustice/frontend": "^5.1.5",
     "@promster/express": "7.0.6",
     "@sentry/node": "7.120.3",
     "@sentry/tracing": "7.120.3",
@@ -170,7 +170,7 @@
     "core-js": "3.43.0",
     "css-minimizer-webpack-plugin": "7.0.2",
     "csurf": "1.11.0",
-    "date-fns": "3.6.0",
+    "date-fns": "4.1.0",
     "debug": "4.3.4",
     "devour-client": "3.1.5",
     "dotenv": "17.2.1",
@@ -182,13 +182,13 @@
     "fishery": "2.3.1",
     "form-data": "4.0.4",
     "got": "11.8.6",
-    "govuk-frontend": "^5.3.1",
+    "govuk-frontend": "^5.11.1",
     "graceful-fs": "4.2.10",
     "grant-express": "5.4.8",
     "hc-sticky": "2.2.7",
     "helmet": "6.0.1",
     "hmpo-form-wizard": "13.0.0",
-    "hmrc-frontend": "6.60.0",
+    "hmrc-frontend": "6.87.0",
     "i18next": "22.4.10",
     "i18next-express-middleware": "2.0.0",
     "i18next-fs-backend": "2.1.1",
@@ -296,7 +296,7 @@
     "pinst": "3.0.0",
     "prettier": "3.1.1",
     "proxyquire": "2.1.3",
-    "sass": "1.58.3",
+    "sass": "1.89.2",
     "sass-loader": "^13.2.0",
     "sinon": "15.0.1",
     "sinon-chai": "3.7.0",
