--- a/helm_deploy/hmpps-book-secure-move-frontend/values.yaml
+++ b/helm_deploy/hmpps-book-secure-move-frontend/values.yaml
@@ -5,7 +5,7 @@ generic-service:
   replicaCount: 4
 
   image:
-    repository: quay.io/hmpps/hmpps-book-secure-move-frontend
+    repository: ghcr.io/ministryofjustice/hmpps-book-secure-move-frontend
     tag: app_version    # override at deployment time
     port: 3000
 
