--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -31,7 +31,7 @@ jobs:
   # main node build workflow
   node_build:
     name: node build
-    uses: ./github/workflows/node_build.yml # WORKFLOW_VERSION
+    uses: ./.github/workflows/build.yml # WORKFLOW_VERSION
     secrets: inherit
   # generic node unit tests - feel free to override with local tests if required
   node_unit_tests:
