--- a/package.json
+++ b/package.json
@@ -234,6 +234,7 @@
     "@faker-js/faker": "10.1.0",
     "@ffmpeg-installer/ffmpeg": "1.1.0",
     "@ministryofjustice/hmpps-npm-script-allowlist": "0.0.3",
+    "@ministryofjustice/hmpps-precommit-hooks": "^1.0.2",
     "@types/chai": "4.3.6",
     "@types/copy-webpack-plugin": "8.0.0",
     "@types/express": "4.17.17",
@@ -341,6 +342,7 @@
     "postpublish": "pinst --enable",
     "postrelease": "npm run release:tags",
     "precommit:secrets": "gitleaks git --pre-commit --redact --staged --verbose --config .gitleaks/config.toml --gitleaks-ignore-path .gitleaks/.gitleaksignore",
+    "precommit:verify": "npm run build && npm test",
     "prepublishOnly": "pinst --disable",
     "prerelease": "npm run update:check && npm run contributors",
     "release": "standard-version --no-verify -a",
