--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,8 @@ aliases:
   - &install_dependencies
     run:
       name: Install NPM dependencies
-      command: npm install -g npm@11 && npm install && npm rebuild node-sass
+      command: npm run setup
+      #command: npm install -g npm@11 && npm install && npm rebuild node-sass
   - &restore_cache
     restore_cache:
       name: Restore NPM cache
