feat: Map-2834 update husky to fix allowlist removal of '@4.0.0': 'FORBID'

--- a/package.json
+++ b/package.json
@@ -336,13 +336,14 @@
     "coverage:open": "npm run coverage && open-cli ./coverage/index.html",
     "develop": "run-p watch:js:*",
     "git:checkbranch": "CURRENT_BRANCH=$(git rev-parse --abbrev-ref HEAD); if [ \"$CURRENT_BRANCH\" = \"main\" ]; then echo 'Committing to the main branch is not allowed'; exit 1; fi",
+    "husky": "husky init",
     "lint": "eslint . --cache",
     "lint-staged": "lint-staged",
-    "postinstall": "husky install",
     "postpublish": "pinst --enable",
     "postrelease": "npm run release:tags",
     "precommit:secrets": "gitleaks git --pre-commit --redact --staged --verbose --config .gitleaks/config.toml --gitleaks-ignore-path .gitleaks/.gitleaksignore",
     "precommit:verify": "npm run build && npm test",
+    "prepare": "husky",
     "prepublishOnly": "pinst --disable",
     "prerelease": "npm run update:check && npm run contributors",
     "release": "standard-version --no-verify -a",
