--- a/package.json
+++ b/package.json
@@ -233,6 +233,8 @@
     "@commitlint/config-conventional": "17.4.4",
     "@faker-js/faker": "10.1.0",
     "@ffmpeg-installer/ffmpeg": "1.1.0",
+    "@ministryofjustice/hmpps-npm-script-allowlist": "0.0.3",
+    "@ministryofjustice/hmpps-precommit-hooks": "^1.0.2",
     "@types/chai": "4.3.6",
     "@types/copy-webpack-plugin": "8.0.0",
     "@types/express": "4.17.17",
@@ -334,15 +336,19 @@
     "coverage:open": "npm run coverage && open-cli ./coverage/index.html",
     "develop": "run-p watch:js:*",
     "git:checkbranch": "CURRENT_BRANCH=$(git rev-parse --abbrev-ref HEAD); if [ \"$CURRENT_BRANCH\" = \"main\" ]; then echo 'Committing to the main branch is not allowed'; exit 1; fi",
+    "husky": "husky init",
     "lint": "eslint . --cache",
     "lint-staged": "lint-staged",
-    "postinstall": "husky install",
     "postpublish": "pinst --enable",
     "postrelease": "npm run release:tags",
+    "precommit:secrets": "gitleaks git --pre-commit --redact --staged --verbose --config .gitleaks/config.toml --gitleaks-ignore-path .gitleaks/.gitleaksignore",
+    "precommit:verify": "npm run build && npm test",
+    "prepare": "husky",
     "prepublishOnly": "pinst --disable",
     "prerelease": "npm run update:check && npm run contributors",
     "release": "standard-version --no-verify -a",
     "release:tags": "git push --follow-tags origin HEAD:main",
+    "setup": "npm ci && hmpps-npm-script-run-allowlist",
     "start": "node start.js",
     "test": "NODE_ENV=test LOG_LEVEL=silent npx ts-mocha './app/**/*.test.js' './common/**/*.test.js' './config/**/*.test.js'",
     "test-e2e": "npx ts-node test/e2e/parallel-runner.ts",
