--- a/package.json
+++ b/package.json
@@ -296,6 +296,7 @@
     "nyc": "15.1.0",
     "open-cli": "7.1.0",
     "pinst": "3.0.0",
+    "pngquant-bin": "^9.0.0",
     "prettier": "3.1.1",
     "proxyquire": "2.1.3",
     "sass": "1.89.2",
