ci: Install pngquant system dep in circle pipeline

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,10 @@ aliases:
     run:
       name: Install NPM dependencies
       command: npm install -g npm@11 && npm install && npm rebuild node-sass
+  - &install_system_deps
+    run:
+      name: Install system dependencies for image optimization
+      command: apt-get update && apt-get install -y pngquant
   - &restore_cache
     restore_cache:
       name: Restore NPM cache
@@ -65,6 +69,7 @@ jobs:
           at: .
       - *restore_cache
       - *install_dependencies
+      - *install_system_deps
       - run:
           name: Write eslintignore
           command: npx tsc --listFilesOnly | grep -v 'node_modules' | sed 's/\.ts/\.js/' | sed "s#$(pwd)/##" > ./.eslintignore
