--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,6 +52,7 @@ jobs:
       - *set_package_version
       - *restore_cache
       - *install_dependencies
+      - *install_system_deps
       - *save_cache
       - run:
           name: Compile typescript, build assets and frameworks
