--- a/helm_deploy/values-staging.yaml
+++ b/helm_deploy/values-staging.yaml
@@ -26,6 +26,7 @@ generic-service:
     SENTRY_ENVIRONMENT: "staging"
     SERVER_HOST: "hmpps-book-secure-move-frontend-staging.apps.cloud-platform.service.justice.gov.uk"
     FEATURE_FLAG_EXTRADITION_MOVES: "true"
+    FEATURE_FLAG_SECTION_46: "true"
     OFF_NETWORK_ALLOWLIST_ACTIONS: "WARN,REPORT"
     DISALLOWED_DEVICES: "iPhone,Android"
     DISALLOWED_DEVICES_ACTIONS: "WARN,REPORT"
