--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -122,6 +122,7 @@ jobs:
           environment:
             REDIS_URL: ""
             NODE_OPTIONS: --max-old-space-size=12288
+            FEATURE_FLAG_SECTION_46: true
           command: |
             npm run test-e2e -- --test $(circleci tests glob "test/e2e/**/*.test.js" | circleci tests split --split-by=timings)
       - run:
