feat: MAPB-219 Add feature switch to search people by fuzzy pnc

--- a/.github/branch-deploy/config-map.yml
+++ b/.github/branch-deploy/config-map.yml
@@ -29,6 +29,7 @@ data:
   FEATURE_FLAG_ADD_LODGE_BUTTON: "true"
   FEATURE_FLAG_MOVE_PREVIEW: "true"
   FEATURE_FLAG_EXTRADITION_MOVES: "true"
+  FEATURE_FLAG_FUZZY_PNC_SEARCH: "true"
   ORDNANCE_MAP_API_URL: "https://api.os.uk"
   ENABLE_DEVELOPMENT_TOOLS: "true"
   OFF_NETWORK_ALLOWLIST: "*"
