--- a/helm_deploy/values-preprod.yaml
+++ b/helm_deploy/values-preprod.yaml
@@ -14,6 +14,7 @@ generic-service:
     API_BASE_URL: "https://hmpps-book-secure-move-api-preprod.apps.cloud-platform.service.justice.gov.uk"
     AUTH_PROVIDER_URL: "https://sign-in-preprod.hmpps.service.justice.gov.uk"
     FEATURE_FLAG_ADD_LODGE_BUTTON: "true"
+    FEATURE_FLAG_FUZZY_PNC_SEARCH: "true"
     FEEDBACK_URL: "https://eu.surveymonkey.com/r/3CKYXSC"
     FRAMEWORKS_VERSION: "2.5.0"
     GOOGLE_ANALYTICS_ID: "G-3LCJP1TWQC"
