ci: MAP-2834 Start migration to GHA

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -55,7 +55,7 @@ jobs:
   helm_lint:
     strategy:
       matrix:
-        environments: ['dev', 'uat', 'preprod', 'prod']
+        environments: ['dev', 'uat', 'preprod', 'production']
     name: helm lint
     uses: ministryofjustice/hmpps-github-actions/.github/workflows/test_helm_lint.yml@v2 # WORKFLOW_VERSION
     secrets: inherit
