ci: MAP-2834 GHA require prereq step first

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -42,6 +42,7 @@ jobs:
   # main node build workflow
   node_build:
     name: node build
+    needs: [build_prereqs]
     uses: ministryofjustice/hmpps-github-actions/.github/workflows/node_build.yml@v2 # WORKFLOW_VERSION
     secrets: inherit
     with:
