ci: MAP-2834 GHA install image libs as part of npm build

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -31,22 +31,13 @@ concurrency:
   cancel-in-progress: ${{ github.ref != 'refs/heads/main' }}
 
 jobs:
-  build_prereqs:
-    name: Install build pre-requisites
-    runs-on: ubuntu-latest
-    steps:
-      - name: Install image optimiser libraries
-        shell: bash
-        run: |
-          yarn add pngquant optipng
   # main node build workflow
   node_build:
     name: node build
-    needs: [build_prereqs]
     uses: ministryofjustice/hmpps-github-actions/.github/workflows/node_build.yml@v2 # WORKFLOW_VERSION
     secrets: inherit
     with:
-      install_command: 'npm run setup'
+      install_command: 'yarn add pngquant optipng && npm run setup'
   # generic node unit tests - feel free to override with local tests if required
   node_unit_tests:
     name: node unit tests
