ci: MAP-2834 GHA install image libs as part of npm build

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -37,7 +37,7 @@ jobs:
     uses: ministryofjustice/hmpps-github-actions/.github/workflows/node_build.yml@v2 # WORKFLOW_VERSION
     secrets: inherit
     with:
-      install_command: 'npm install -g pngquant optipng && npm run setup'
+      install_command: 'yarn add pngquant optipng && npm install && npm run setup'
   # generic node unit tests - feel free to override with local tests if required
   node_unit_tests:
     name: node unit tests
