ci: MAP-2834 GHA remove clean from build command

--- a/package.json
+++ b/package.json
@@ -325,7 +325,7 @@
   },
   "files": [],
   "scripts": {
-    "build": "npm run clean && npm run compile && webpack --config webpack.config.js",
+    "build": "npm run compile && webpack --config webpack.config.js",
     "circle:coverage": "nyc --reporter=lcov --reporter=html npm test -- --reporter mocha-junit-reporter --reporter-options mochaFile=reports/mocha/test-results.xml",
     "circle:coveralls": "nyc report --reporter=text-lcov | coveralls",
     "circle:lint": "npm run lint -- --format junit --output-file ./reports/eslint/eslint.xml",
