--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -46,14 +46,6 @@ jobs:
         uses: actions/setup-node@v6
         with:
           node-version-file: ".nvmrc"
-      - name: Install image optimisation libs
-        shell: bash
-        run: |
-          yarn add pngquant optipng
-      - name: Install npm dependencies
-        shell: bash
-        run: |
-          npm install -g npm@11 && npm install && npm rebuild node-sass
       - name: restore cache
         id: restore-cache
         uses: actions/cache/restore@v4
@@ -62,7 +54,15 @@ jobs:
         with:
           path: |
             node_modules
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package.json', '!**/node_modules/**') }}
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json', '!**/node_modules/**') }}
+      - name: Install image optimisation libs
+        shell: bash
+        run: |
+          yarn add pngquant optipng
+      - name: Install npm dependencies
+        shell: bash
+        run: |
+          npm install -g npm@11 && npm install && npm rebuild node-sass
       - name: install dependencies
         if: steps.restore-cache.outputs.cache-hit != 'true'
         shell: bash
@@ -94,7 +94,7 @@ jobs:
         with:
           path: |
             node_modules
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package.json', '!**/node_modules/**') }}
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json', '!**/node_modules/**') }}
 
   # generic node unit tests - feel free to override with local tests if required
   node_unit_tests:
