ci: MAP-2834 unit tests

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -79,6 +79,10 @@ jobs:
         shell: bash
         run: |
           npm run ci:lint
+      - name: List files
+        shell: bash
+        run: |
+          ls -l
       - name: upload the artifacts
         uses: actions/upload-artifact@v6
         with:
