--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -88,7 +88,7 @@ jobs:
         with:
           name: npm_build_artifacts
           path: |
-            .build/
+            .build
       - name: save cache
         id: save-cache
         uses: actions/cache/save@v5
