--- a/package.json
+++ b/package.json
@@ -314,7 +314,7 @@
     "ts-mocha": "11.1.0",
     "ts-node": "10.9.1",
     "typescript": "5.9.3",
-    "webpack": "^5.101.1",
+    "webpack": "5.104.1",
     "webpack-assets-manifest": "6.2.2",
     "webpack-cli": "6.0.1",
     "webpack-merge": "6.0.1"
