--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -107,7 +107,7 @@ jobs:
     needs: [node_build]
     secrets: inherit
     with:
-      npm_script: 'ci:unit-test'
+      npm_script: 'test'
   # generic node integration tests using wiremock - feel free to override with local tests if required
   node_integration_tests:
     name: node integration tests
