--- a/package.json
+++ b/package.json
@@ -241,7 +241,7 @@
     "@types/i18next-fs-backend": "1.1.2",
     "@types/js-yaml": "4.0.9",
     "@types/lodash": "4.17.20",
-    "@types/mocha": "10.0.1",
+    "@types/mocha": "10.0.10",
     "@types/mock-fs": "4.13.4",
     "@types/netmask": "2.0.5",
     "@types/node": "18.14.0",
@@ -311,7 +311,6 @@
     "testcafe-browser-provider-browserstack": "^1.15",
     "testcafe-reporter-xunit": "2.2.3",
     "timezone-mock": "1.3.6",
-    "ts-mocha": "11.1.0",
     "ts-node": "10.9.1",
     "typescript": "5.9.3",
     "webpack": "5.104.1",
@@ -352,7 +351,7 @@
     "release:tags": "git push --follow-tags origin HEAD:main",
     "setup": "npm ci && hmpps-npm-script-run-allowlist",
     "start": "node start.js",
-    "test": "LOG_LEVEL=silent npm exec ts-mocha './app/**/*.test.js' './common/**/*.test.js' './config/**/*.test.js'",
+    "test": "NODE_ENV=test LOG_LEVEL=silent npm exec mocha --loader ts-node/esm './app/**/*.test.js' './common/**/*.test.js' './config/**/*.test.js'",
     "test-e2e": "npx ts-node test/e2e/parallel-runner.ts",
     "test-e2e:browserstack:ie": "testcafe 'browserstack:IE@11.0:Windows 10' test/e2e/*.test.js",
     "test-e2e:local": "E2E_BASE_URL='' npm run test-e2e -- --debug --reporter false",
