--- a/package.json
+++ b/package.json
@@ -311,6 +311,7 @@
     "testcafe-browser-provider-browserstack": "^1.15",
     "testcafe-reporter-xunit": "2.2.3",
     "timezone-mock": "1.3.6",
+    "ts-mocha": "11.1.0",
     "ts-node": "10.9.1",
     "typescript": "5.9.3",
     "webpack": "5.104.1",
@@ -351,7 +352,7 @@
     "release:tags": "git push --follow-tags origin HEAD:main",
     "setup": "npm ci && hmpps-npm-script-run-allowlist",
     "start": "node start.js",
-    "test": "NODE_ENV=test LOG_LEVEL=silent npm exec mocha --require ts-node/register './app/**/*.test.js' './common/**/*.test.js' './config/**/*.test.js'",
+    "test": "NODE_ENV=test LOG_LEVEL=silent npx ts-mocha './app/**/*.test.js' './common/**/*.test.js' './config/**/*.test.js'",
     "test-e2e": "npx ts-node test/e2e/parallel-runner.ts",
     "test-e2e:browserstack:ie": "testcafe 'browserstack:IE@11.0:Windows 10' test/e2e/*.test.js",
     "test-e2e:local": "E2E_BASE_URL='' npm run test-e2e -- --debug --reporter false",
