ci: MAP-2834 unit tests

--- a/package.json
+++ b/package.json
@@ -328,7 +328,6 @@
     "build": "npm run compile && webpack --config webpack.config.js",
     "ci:coverage": "nyc --reporter=lcov --reporter=html npm test -- --reporter mocha-junit-reporter --reporter-options mochaFile=reports/mocha/test-results.xml",
     "ci:lint": "npm run lint -- --format junit --output-file ./reports/eslint/eslint.xml",
-    "ci:unit-test": "npm test -- --reporter mocha-junit-reporter --reporter-options mochaFile=reports/mocha/test-results.xml",
     "circle:coveralls": "nyc report --reporter=text-lcov | coveralls",
     "clean": "del .build/",
     "clear-cache-reference-data": "node tasks/clear-cache-reference-data.js",
@@ -337,6 +336,7 @@
     "coverage": "nyc --reporter=html --reporter=lcov npm test",
     "coverage:open": "npm run coverage && open-cli ./coverage/index.html",
     "develop": "run-p watch:js:*",
+    "gha:unit-test": "npm test -- --reporter mocha-junit-reporter --reporter-options mochaFile=reports/mocha/test-results.xml",
     "git:checkbranch": "CURRENT_BRANCH=$(git rev-parse --abbrev-ref HEAD); if [ \"$CURRENT_BRANCH\" = \"main\" ]; then echo 'Committing to the main branch is not allowed'; exit 1; fi",
     "husky": "husky init",
     "lint": "eslint . --cache",
