--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -104,6 +104,7 @@ jobs:
   unit_test:
     name: Run the unit tests
     runs-on: ubuntu-latest
+    needs: [node_build]
     steps:
       - name: restore cache
         id: restore-cache
