--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -71,18 +71,6 @@ jobs:
         shell: bash
         run: |
           npm run build
-      - name: Write eslintignore
-        shell: bash
-        run: |
-          npx tsc --listFilesOnly | grep -v 'node_modules' | sed 's/\.ts/\.js/' | sed "s#$(pwd)/##" > ./.eslintignore
-      - name: Linter check # Run linter after build because the integration test code depend on compiled typescript...
-        shell: bash
-        run: |
-          npm run ci:lint
-      - name: List files
-        shell: bash
-        run: |
-          ls -la
       - name: upload the artifacts
         uses: actions/upload-artifact@v6
         with:
@@ -99,13 +87,44 @@ jobs:
           path: |
             node_modules
           key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json', '!**/node_modules/**') }}
-
+  # generic node unit tests - feel free to override with local tests if required
+  lint:
+    name: Run eslint
+    runs-on: ubuntu-latest
+    needs: [node_build]
+    steps:
+      - name: restore cache
+        id: restore-cache
+        uses: actions/cache/restore@v4
+        env:
+          cache-name: node-modules
+        with:
+          path: |
+            node_modules
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json', '!**/node_modules/**') }}
+      - name: download build artifacts
+        uses: actions/download-artifact@v6
+        with:
+          name: npm_build_artifacts
+      - name: Write eslintignore
+        shell: bash
+        run: |
+          npx tsc --listFilesOnly | grep -v 'node_modules' | sed 's/\.ts/\.js/' | sed "s#$(pwd)/##" > ./.eslintignore
+      - name: Run linter
+        shell: bash
+        run: |
+          npm run ci:lint
   # generic node unit tests - feel free to override with local tests if required
   unit_test:
     name: Run the unit tests
     runs-on: ubuntu-latest
     needs: [node_build]
     steps:
+      - uses: actions/checkout@v6
+      - name: Use Node.js ${{ inputs.node_version_file }}
+        uses: actions/setup-node@v6
+        with:
+          node-version-file: ${{ inputs.node_version_file }}
       - name: restore cache
         id: restore-cache
         uses: actions/cache/restore@v4
