--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -97,6 +97,11 @@ jobs:
     runs-on: ubuntu-latest
     needs: [node_build]
     steps:
+      - uses: actions/checkout@v6
+      - name: Use Node.js ${{ inputs.node_version_file }}
+        uses: actions/setup-node@v6
+        with:
+          node-version-file: ".nvmrc"
       - name: restore cache
         id: restore-cache
         uses: actions/cache/restore@v4
@@ -110,6 +115,7 @@ jobs:
         uses: actions/download-artifact@v6
         with:
           name: npm_build_artifacts
+          path: ".build"
       - name: list files
         shell: bash
         run: |
@@ -146,6 +152,7 @@ jobs:
         uses: actions/download-artifact@v6
         with:
           name: npm_build_artifacts
+          path: ".build"
       - name: Run tests
         shell: bash
         run: |
