ci: MAP-2834 install before lint

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -116,10 +116,10 @@ jobs:
         with:
           name: npm_build_artifacts
           path: ".build"
-      - name: list files
+      - name: install
         shell: bash
         run: |
-          ls -la
+          npm install
       - name: Write eslintignore
         shell: bash
         run: |
