--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -119,7 +119,7 @@ jobs:
       - name: install
         shell: bash
         run: |
-          npm install
+          npm install -g npm@11 && npm install
       - name: Write eslintignore
         shell: bash
         run: |
@@ -153,6 +153,10 @@ jobs:
         with:
           name: npm_build_artifacts
           path: ".build"
+      - name: install
+        shell: bash
+        run: |
+          npm install -g npm@11 && npm install
       - name: Run tests
         shell: bash
         run: |
