--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -138,7 +138,7 @@ jobs:
       - name: Use Node.js ${{ inputs.node_version_file }}
         uses: actions/setup-node@v6
         with:
-          node-version-file: ${{ inputs.node_version_file }}
+          node-version-file: ".nvmrc"
       - name: restore cache
         id: restore-cache
         uses: actions/cache/restore@v4
