--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -132,7 +132,7 @@ jobs:
   unit_test:
     name: Run the unit tests
     runs-on: ubuntu-latest
-    needs: [node_build, lint]
+    needs: [node_build]
     steps:
       - uses: actions/checkout@v6
       - name: Use Node.js ${{ inputs.node_version_file }}
@@ -160,12 +160,12 @@ jobs:
       - name: Run tests
         shell: bash
         run: |
-          npm run test
+          npm run gha:unit-test
 
   node_integration_tests:
     name: node integration tests
     uses: ./.github/workflows/integration_tests.yml
-    needs: [node_build, lint, unit_test]
+    needs: [unit_test]
     secrets: inherit
     with:
       app_version: ${{ needs.build_docker.outputs.app_version }}
