--- a/package.json
+++ b/package.json
@@ -336,7 +336,7 @@
     "coverage": "nyc --reporter=html --reporter=lcov npm test",
     "coverage:open": "npm run coverage && open-cli ./coverage/index.html",
     "develop": "run-p watch:js:*",
-    "gha:unit-test": "npm test -- --reporter mocha-junit-reporter --reporter-options mochaFile=reports/mocha/test-results.xml",
+    "gha:unit-test": "npx mocha --require ts-node/register  --extensions ts,tsx,js \"./{app,common,config}/**/*.test.{ts,tsx,js}\"",
     "git:checkbranch": "CURRENT_BRANCH=$(git rev-parse --abbrev-ref HEAD); if [ \"$CURRENT_BRANCH\" = \"main\" ]; then echo 'Committing to the main branch is not allowed'; exit 1; fi",
     "husky": "husky init",
     "lint": "eslint . --cache",
